# fixed-that-for-you

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml  setup_precommit.sh
.github/workflows/: docker-build.yml  python-tests.yml
extensions/: fix_link.py
script/: README.md  bootstrap  cibuild  console  server  setup  test  update
src/: AppleNews.py  StocksAppleCom.py  linkparser.py  logutil.py
tests/: e2e_test_linkparser.py  test_linkparser.py
