[tool.poetry]
name = "fixed-that-for-you"
version = "1.0.0"
description = "A sample project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
tldextract = "^3.1.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
